--- a/.github/workflows/called_workflow.yml
+++ b/.github/workflows/called_workflow.yml
@@ -1,7 +1,7 @@
 name: CalledWorkFlow
 on:
   repository_dispatch:
-    types: ${{[ github.event.event_type]}}
+    types: [CalledWorkFlow]
 
 jobs:
   build:
