--- a/.github/workflows/called_workflow.yml
+++ b/.github/workflows/called_workflow.yml
@@ -3,22 +3,32 @@ on:
   repository_dispatch:
     types: [panggilan]
 
-
 jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      parameter1: ${{ github.event.client_payload.parameter1 }}
-      parameter2: ${{ github.event.client_payload.parameter2 }}
+      nama: ${{ github.event.client_payload.nama }}
+      repository: ${{ github.event.client_payload.repository }}
+      link_repository: ${{ github.event.client_payload.link_repository }}
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Run a oneline script
-        run: echo Berhasil line 1
-
-      - name: Run a multiline script
-        run: |
-          echo Berhasil line 1
-          echo Berhasil line 2
-          echo $parameter1
-          echo $parameter1
+      - name: Use Node.js 20
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+      
+      - name: Pull Subtree from Repository A
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          port: ${{ secrets.PORT }}
+          script: |
+            cd testing_git_team/main-caller
+            if [ -d "$repository" ]; then
+              git subtree pull --prefix=$repository $link_repository main --squash
+            else
+              git subtree add --prefix=$repository $link_repository main --squash
+            fi
+            cd testing_git_team/main-caller && git push origin main
