--- a/.github/workflows/called_workflow.yml
+++ b/.github/workflows/called_workflow.yml
@@ -7,8 +7,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      nama: ${{ github.event.client_payload.nama }}
-      repository: ${{ github.event.client_payload.repository }}
       tree_repository: ${{ github.event.client_payload.tree_repository}}
       link_tree_repository: ${{ github.event.client_payload.link_tree_repository }}
 
@@ -26,10 +24,10 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
-            cd testing_git_team/$repository
+            cd testing_git_team/main-caller
             if [ -d "$tree_repository" ]; then
               git subtree pull --prefix=$tree_repository $link_tree_repository main --squash
             else
               git subtree add --prefix=$tree_repository $link_tree_repository main --squash
             fi
-            cd testing_git_team/$repository && git push origin main
+            cd main-caller && git push origin main
