--- a/.github/workflows/called_workflow.yml
+++ b/.github/workflows/called_workflow.yml
@@ -24,15 +24,9 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           script: |
-            if [ -d "testing_git_team/main-caller" ]; then
-              cd testing_git_team/main-caller
+            if [ -d "${{ tree_repository }}" ]; then
+              git subtree pull --prefix="${{ tree_repository }}" "${{ link_tree_repository }}" main --squash
             else
-              echo "Directory testing_git_team/main-caller does not exist"
-              exit 1
-            fi
-            if [ -d "${tree_repository}" ]; then
-              git subtree pull --prefix="${tree_repository}" "${link_tree_repository}" main --squash
-            else
-              git subtree add --prefix="${tree_repository}" "${link_tree_repository}" main --squash
+              git subtree add --prefix="${{ tree_repository }}" "${{ link_tree_repository }}" main --squash
             fi
             git push origin main
