--- a/.github/workflows/called_workflow.yml
+++ b/.github/workflows/called_workflow.yml
@@ -22,6 +22,7 @@ jobs:
           port: ${{ secrets.PORT }}
           envs: tree_repository=${{ github.event.client_payload.tree_repository }}, link_tree_repository=${{ github.event.client_payload.link_tree_repository }}
           script: |
+            cd testing_git_team/main-caller
             if [ -d "$tree_repository" ]; then
               git subtree pull --prefix="$tree_repository" "$link_tree_repository" main --squash
             else
