--- a/.github/workflows/called_workflow.yml
+++ b/.github/workflows/called_workflow.yml
@@ -20,12 +20,11 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
-          env: tree_repository=${{ github.event.client_payload.tree_repository }}, link_tree_repository=${{ github.event.client_payload.link_tree_repository }}
           script: |
             cd testing_git_team/main-caller
             if [ -d "$tree_repository" ]; then
-              git subtree pull --prefix=$tree_repository $link_tree_repository main --squash
+              git subtree pull --prefix=sub-caller git@github.com:mohammadfikrinursyahbani/sub-caller.git main --squash
             else
-              git subtree add --prefix=$tree_repository $link_tree_repository main --squash
+              git subtree add --prefix=sub-caller git@github.com:mohammadfikrinursyahbani/sub-caller.git main --squash
             fi
             git push origin main
