--- a/.github/workflows/called_workflow.yml
+++ b/.github/workflows/called_workflow.yml
@@ -12,19 +12,17 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '20'
-      
       - name: Pull Subtree from Repository A
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          port: ${{ secrets.PORT }}
-          script: |
+        env:
+          TREE_REPOSITORY: ${{ github.event.client_payload.tree_repository }}
+          LINK_TREE_REPOSITORY: ${{ github.event.client_payload.link_tree_repository }}
+        run: |
+          ssh ${{ secrets.USERNAME }}@${{ secrets.HOST }} -p ${{ secrets.PORT }} << EOF
             cd testing_git_team/main-caller
-            if [ -d "sub-caller" ]; then
-              git subtree pull --prefix=sub-caller git@github.com:mohammadfikrinursyahbani/sub-caller.git main --squash
+            if [ -d "\$TREE_REPOSITORY" ]; then
+              git subtree pull --prefix=\$TREE_REPOSITORY \$LINK_TREE_REPOSITORY main --squash
             else
-              git subtree add --prefix=sub-caller git@github.com:mohammadfikrinursyahbani/sub-caller.git main --squash
+              git subtree add --prefix=\$TREE_REPOSITORY \$LINK_TREE_REPOSITORY main --squash
             fi
             git push origin main
+          EOF
