--- a/.github/workflows/called_workflow.yml
+++ b/.github/workflows/called_workflow.yml
@@ -26,11 +26,14 @@ jobs:
           envs: TREE_REPOSITORY, LINK_TREE_REPOSITORY
           script: |
             cd testing_git_team/main-caller
+            git config user.email "fikrinursyahbani@gmail.com"
+            git config user.name "mohammadfikrinursyahbani"
+            
             if ls | grep $TREE_REPOSITORY
             then
               git subtree pull --prefix=$TREE_REPOSITORY $LINK_TREE_REPOSITORY main --squash
             else
               git subtree add --prefix=$TREE_REPOSITORY $LINK_TREE_REPOSITORY main --squash
             fi
-            
+
             git push origin main
